<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="170dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="18sp"
            android:autofillHints="@string/email" />

        <EditText
            android:id="@+id/loginPwd"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:padding="10dp"
            android:textSize="18sp"
            android:autofillHints="@string/password" />

        <TextView
            android:id="@+id/forgotPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:text="@string/forgot_password" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="@color/black"
            app:backgroundTint="#000000"
            app:backgroundTintMode="multiply" />

        <TextView
            android:id="@+id/signupLink"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/create_account" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>