<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/new_task"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/taskName"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/task_name"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textSize="18sp"
            android:autofillHints="@string/task_name" />

        <EditText
            android:id="@+id/description"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/add_description"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textSize="18sp"
            android:autofillHints="@string/add_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="175dp">

            <EditText
                android:id="@+id/dueDate"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/add_due_date"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textSize="18sp"
                android:autofillHints="@string/add_due_date"
                tools:ignore="TextFields" />

            <ImageView
                android:id="@+id/calendar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="44dp"
                app:srcCompat="@drawable/calendar"
                android:contentDescription="@string/calendar" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="340dp"
        tools:layout_editor_absoluteY="175dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTask"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:scaleType="centerCrop"
            app:backgroundTint="@color/black"
            app:elevation="10dp"
            app:fabSize="normal"
            app:maxImageSize="20dp"
            app:srcCompat="@drawable/check"
            app:tint="@color/white"
            app:useCompatPadding="false"
            android:contentDescription="@string/save_task"
            android:layout_alignParentEnd="true"
            android:focusable="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/update"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:visibility="invisible"
            android:scaleType="centerCrop"
            app:backgroundTint="@color/black"
            app:elevation="10dp"
            app:fabSize="normal"
            app:maxImageSize="18dp"
            app:srcCompat="@drawable/edit"
            app:tint="@color/white"
            app:useCompatPadding="false"
            android:contentDescription="@string/update"
            android:layout_alignParentEnd="true"
            android:focusable="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>